[package]
name = "zainpay"
version = "0.1.0"
edition = "2021"
authors = ["Nura Yusuf <nurakilauren@gmail.com>"]
description = "Rust SDK for ZainPay API"
license = "MIT"
repository = "https://github.com/nurayusuf/zainpay-rust-sdk"
documentation = "https://docs.rs/zainpay"
readme = "README.md"
keywords = ["zainpay", "payment", "nigerian", "fintech"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockito = "0.31"
serde_json = "1.0"